--- a/micro01.yml
+++ b/micro01.yml
@@ -1,10 +1,7 @@
 server:
   port: 8085
-spring:
-  application:
-    name: micro01
-  data:
-    mongodb:
-      database: demo_Credit
-      uri: mongodb://localhost:27017
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
 
