--- a/micro02.yml
+++ b/micro02.yml
@@ -1,9 +1,6 @@
 server:
   port: 8086
-spring:
-  application:
-    name: micro02
-  data:
-    mongodb:
-      database: demo_CreditCard
-      uri: mongodb://localhost:27017
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
